--- a/pages/examples/index.html
+++ b/pages/examples/index.html
@@ -7,8 +7,22 @@
 </head>
 <body>
         <div style="height: 100%; position: absolute; top: 0; width: 100%;">
-            <div class="header">
+            <!-- <div class="header">
                 TSI JavaScript SDK Examples
+            </div> -->
+
+            <div class="titleHeader">
+                <div class="left">
+                    <div class="titleText">Time Series Insights JavaScript SDK Samples</div>
+                    <div class="titleContent">The Azure Time Series Insights JavaScript SDK (aka tsiclient) is a JavaScript library for Microsoft Azure Time Series Insights, featuring components for data visualization and analytics, utilities for making calls directly to the TSI Platform API, and more. tsiclient also ships with an associated CSS file (which you must include using your preferred css linking method), which makes the components look great out of the box.</div>
+                    <button>Github</button>
+                    <button>Documentation</button>
+                    <button>NPM</button>
+                </div>
+                <div class="right">
+                    <img src="images/sittingPerson.svg">
+                    <img src="images/charts.svg">
+                </div>
             </div>
 
             <div class="chartsWrapper">
